# alpacarizer

./: README.md  instruction_data copy.json  instruction_data.json  pyproject.toml  test.ipynb
src/alpacarizer/: alpacacontainer.py  generator.py  streamlit_app.py  utils.py
